# pipeline_antaq

./: .dockerignore  README.md  pyproject.toml
.astro/: config.yaml
dags/: teste_minio.py
include/minio/.minio.sys/: format.json
include/minio/.minio.sys/tmp/.trash/00ca05c7-8b4c-4b07-bc69-8e359cdc419b/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/00e8f65b-1006-43e3-8fd4-11cca5e4aad8/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/01dfaf53-e13b-4d62-91c5-82db137240ff/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/04024978-911a-4ace-b1b0-b1c217f49297/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/0a85c5b3-f13f-4ac6-b2ac-dd7b8b55742d/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/0ec5d03f-5030-43ac-abc3-7de55df41154/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/0fc1fef1-e389-401d-ae36-c65fdf98fa9f/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/147d2079-65ce-41c3-909e-b66a821970b1/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/1517d2d7-82e4-423c-bf12-d83d309bd75f/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/171dc528-6990-44b6-a1bb-05feb1c0bc93/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/19eef8c9-a3d2-497c-a7d9-da90d5b2ed5b/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/222a13ce-2725-4376-810d-f22a5afa9245/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/27e16bd8-bdc3-49d6-a47b-c8aabeaafc70/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/2f543fe0-3707-450d-8dd9-97263a9f732d/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/324e325f-c559-4618-ae3a-2a5e390adaf6/: xl.meta.bkp
(+85 files in other folders)
