[tool.poetry]
name = "pipeline-antaq"
version = "0.1.0"
description = "Pipeline de dados Antaq com Airflow, Minio e Sql Server."
authors = ["Zenilson Silva"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
apache-airflow = "^2.10.5"
minio = "^7.2.15"
duckdb = "^1.2.1"
apache-airflow-providers-amazon = "^9.4.0"
boto3 = "^1.37.21"
pymssql = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
